# aseprite_mcp

./: .gitignore  Cargo.toml  README.md
.github/instructions/: aseprite-api.instructions.md
scripts/aseprite-mcp-plugin/: package.json  plugin.lua
src/: aseprite.rs  lua_helpers.rs  main.rs  server.rs  utils.rs
src/tools/: cel.rs  drawing.rs  effects.rs  export.rs  filter.rs  frame.rs  layer.rs  mod.rs  palette.rs  scripting.rs  selection.rs  slice.rs  sprite.rs  tag.rs
