[package]
name = "aseprite_mcp"
version = "0.1.0"
edition = "2024"
description = "MCP Server for Aseprite pixel art editor - bridge AI assistants with Aseprite"
license = "MIT"
repository = "https://github.com/user/aseprite_mcp"

[dependencies]
rmcp = { version = "0.3", features = ["server", "macros", "transport-io"] }
tokio = { version = "1.46", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "std", "fmt"] }